--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -38,4 +38,4 @@ jobs:
         working-directory: .
 
       - name: "Push image"
-        run: docker push ${{ env.GAR_LOCATION }}
+        run: docker push ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/github-actions/${{ env.GAR_LOCATION }}
